<package>
  <name>chris_create_flexbe_behaviors</name>
  <version>1.0.0</version>
  <description>
     chris_create_flexbe_behaviors references all implemented behaviors associated with the CHRIS Create project
  </description>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <!-- Add here all ROS packages that contain behaviors -->
  <run_depend>behavior_chris_create_example_behavior</run_depend>
  <run_depend>behavior_createtimedtwisttest</run_depend>
  <run_depend>behavior_pure_pursuit_test</run_depend>

</package>
