<package>
  <name>chris_create_flexbe_behaviors</name>
  <version>1.0.0</version>
  <description>
     chris_create_flexbe_behaviors references all implemented behaviors associated with the CHRIS Create project
  </description>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>

  <run_depend>chris_create_flexbe_states</run_depend>
  
  <export>
    <flexbe_behaviors/>
  </export>

</package>
