<package>
  <name>chris_create_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     chris_create_flexbe_states provides a collection of custom states.
  </description>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <run_depend>flexbe_core</run_depend>

</package>
