<package>
  <name>behavior_pure_pursuit_test</name>
  <version>1.0.0</version>
  <description>
     Test of the pure pursuit system
  </description>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_pure_pursuit_test</url>
  <author>David Conner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>

</package>
